kustomize/overlays/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toy-app-ingress
spec:
  rules:
    - host: "toyapp.overwatch.distributive.network"
      http:
        paths:
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: backend-svc
                port:
                  number: 80
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
  tls:
  - hosts:
    - '*.overwatch.distributive.network'
    - toyapp.overwatch.distributive.network
